[tool.poetry]
name = "notional"
version = "0.8.2"
description = "A high-level interface for the Notion SDK."
license = "MIT"
authors = ["Jason Heddings <jheddings@gmail.com>"]
repository = "https://github.com/jheddings/notional/"
documentation = "https://jheddings.github.io/notional/"
readme = "README.md"
classifiers=[
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8.1"
notion-client = "^2.2.1"
pydantic = "^1.10.18"
html5lib = "^1.1"
urllib3 = "^1.26.19"
emoji = "^2.12.1"

[tool.poetry.group.dev.dependencies]
GitPython = "^3.1.43"
pre-commit = "^3.5.0"
pytest = "^8.3.2"
coverage = "^7.6.1"
pytest-vcr = "^1.0.2"
mypy = "^1.11.1"
ruff = "^0.6.2"
black = "^24.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = "^0.25.1"
mkdocs-material = "^9.5.32"
mkdocstrings-python = "^1.10.8"

[tool.black]
line_length = 88

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "RET", # flake8-return
    "ERA", # eradicate
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long
]

[tool.ruff.lint.isort]
known-first-party = ["notional"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
